{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 8,
  "lineage": "14bdcc61-a1e0-5839-f030-c6126dc9a610",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080",
                  "1000-2000"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-10-01T13:51:04.214-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "test-firewall",
            "name": "test-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/project-for-terraform/global/networks/test-network",
            "priority": 1000,
            "project": "project-for-terraform",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-for-terraform/global/firewalls/test-firewall",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "web"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http-8080",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-10-01T13:50:16.308-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "http-8080",
            "name": "http-8080",
            "network": "https://www.googleapis.com/compute/v1/projects/project-for-terraform/global/networks/default",
            "priority": 1000,
            "project": "project-for-terraform",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-for-terraform/global/firewalls/http-8080",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-8080"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "jenkins",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20190905",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-for-terraform/zones/us-central1-a/disks/jenkins"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "id": "jenkins",
            "instance_id": "2168867467734946037",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "ssh-keys": "Gin:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDAGvFwuHdn/xcqyq4rkq2QzyAefJ9iSXF2BaV1alsdnmjpPrMeQOLozudWe97Qa4x8Pw6aXQqHtWfGZ46jSGE9hZvci2cdq8BqY8drtSDwVpqeKJ/b+Rpt7fA/BWmgqm6bgj760WU+2HrSZ3JhvzF8YT72Pq0QGDmIsY74/TCIBKQe/vEyB6Sq9EAJqKcLGNt0YXG5XdtcUkOnhQvjXhGCWMezPuFNbXV+5zIMhRprTASYfrj28ga1v3ub4GGXgyA76xyLQCNxt4J/ODgF+ZTztZFOdkw3ybyzGObTcU5h65Ba8cBE6vhvOrfSISVeoMMogpbO77/zPx/EbhrDZT6h Gin@Gin-PC\n"
            },
            "metadata_fingerprint": "4QhGAyjP2bE=",
            "name": "jenkins",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.69.89.236",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-for-terraform/global/networks/default",
                "network_ip": "10.128.0.4",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-for-terraform/regions/us-central1/subnetworks/default",
                "subnetwork_project": "project-for-terraform"
              }
            ],
            "project": "project-for-terraform",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-for-terraform/zones/us-central1-a/instances/jenkins",
            "tags": [
              "http-8080",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "b5GVfzVRyQ4=",
            "zone": "us-central1-a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "test-network",
            "name": "test-network",
            "project": "project-for-terraform",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-for-terraform/global/networks/test-network"
          }
        }
      ]
    }
  ]
}